<resources>
    <string name="app_name" translatable="false">VirtualWaiter</string>
    <string name="login_btn">Log in</string>
    <string name="table_btn">Tables</string>
    <string name="login_placeholder" translatable="false">Login</string>
    <string name="password_placeholder">Password</string>
    <string name="waiter">Waiter</string>

    <string name="menu">MENU</string>
    <string name="choose_table">Choose Table</string>
    <string name="username">waiter username</string>
    <string name="password">password</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="btnTableLabel">Table</string>
    <string name="plLanguage">PL</string>
    <string name="enLanguage">EN</string>
    <string name="choose_waiter">Choose waiter</string>
    <string name="menu_dish_label">Dishes</string>
    <string name="menu_drink_label">Drinks</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="title_activity_manage_menu" translatable="false"></string>
    <string name="title_activity_manage_tables" translatable="false"></string>
    <string name="title_activity_manage_workers" translatable="false"></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="menu_tab">Menu</string>
    <string name="order_tab">Order</string>
    <string name="table_capacity">person</string>
    <string name="total_label">Total:</string>
    <string name="place_order_btn">Place order</string>
    <string name="status_order_placed">Order placed</string>
    <string name="status_order_in_progress">In progress</string>
    <string name="status_order_ready">Ready</string>
    <string name="tab_current">Current</string>
    <string name="tab_past">Closed</string>
    <string name="tab_history">History</string>
    <string name="waiter_delivered">Delivered</string>
    <string name="waiter_paid">Paid</string>
    <string name="notification_title_new_order">New order</string>
    <string name="notification_body_new_order">A new order has been placed!</string>
    <string name="status_placed">placed</string>
    <string name="status_received">received</string>
    <string name="status_in_progress">in progress</string>
    <string name="status_ready">ready</string>
    <string name="status_delivered">delivered</string>
    <string name="status_ready_to_pay">ready to pay</string>
    <string name="status_paid">paid</string>
    <string name="status_canceled">canceled</string>
    <string name="order_label">Order</string>
    <string name="status_order_received">Received</string>
    <string name="question_split_bill">Do you want to split the bill?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splitbill_amount_question">How many people do you want to split the bill between?</string>
    <string name="payment_method_question">Choose your payment method</string>
    <string name="btn_pay_label">Ask for a bill</string>
    <string name="toast_fill_split_amount">Please specify the number of people to split the bill!</string>
    <string name="toast_invalid_split_amount">Invalid split amount!</string>
    <string name="toast_choose_payment_method">Choose payment method</string>
    <string name="notification_title_order_changed">"Table "</string>
    <string name="notification_body_order_changed">Order status changed</string>
    <string name="bye_message">The waiter has been notified, he will bring you the bill in a moment. Thank you and come back again!</string>
    <string name="paymentMethod_label">Payment method:</string>
    <string name="payment_byCard">by card</string>
    <string name="payment_byCash">by cash</string>
    <string name="split_between_payment">Split bill to:</string>
    <string name="orders">Orders</string>
    <string name="workers">Employees</string>
    <string name="tables">Tables</string>
    <string name="add_new_worker">add new employee</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="type">Type</string>
    <string name="save">Save</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="empty_fields">All fields must be filled!</string>
    <string name="add_worker_success">New employee added successfully!</string>
    <string name="add_worker_fail">Something went wrong... New employee couldn\'t be added. Try again later!</string>
    <string name="update_worker_success">The employee updated successfully!</string>
    <string name="update_worker_fail">Something went wrong… The employee couldn\'t be updated. Try again later!</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="add_table_success">New table added successfully!</string>
    <string name="add_table_fail">Something went wrong… New table couldn\'t be added. Try again later!</string>
    <string name="update_table_success">The table updated successfully!</string>
    <string name="update_table_fail">Something went wrong… The table couldn\'t be updated. Try again later!</string>
    <string name="add">+</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="is_it_vegan">Is it vegan?</string>
    <string name="is_it_gluten_free">Is it gluten free?</string>
    <string name="is_it_alcoholic">Is it alcoholic?</string>
    <string name="manage_employee">Manage Employee</string>
    <string name="manage_table">Manage Table</string>
    <string name="manage_food">Manage Food</string>
    <string name="english_description">English Description</string>
    <string name="polish_description">Polish Description</string>
    <string name="english_name">English Name</string>
    <string name="polish_name">Polish Name</string>
    <string name="add_food_success">New food added successfully!</string>
    <string name="add_food_fail">Something went wrong… New food couldn\'t be added. Try again later!</string>
    <string name="update_food_success">The food updated successfully!</string>
    <string name="update_food_fail">Something went wrong… The food couldn\'t be updated. Try again later!</string>
    <string name="photo_name">Photo name</string>
    <string name="date">Date: </string>
    <string name="get_orders_success">Orders pulled successfully!</string>
    <string name="get_orders_fail">Something went wrong… The list of orders couldn\'t be pulled from server. Try again later!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete this?</string>
    <string name="delete_worker_success" >Employee deleted successfully!</string>
    <string name="delete_worker_fail" >Something went wrong… The employee couldn\'t be deleted. Try again later!</string>
    <string name="get_workers_fail">Something went wrong... Try again later!</string>
    <string name="chef">Chef</string>
    <string name="manager">Manager</string>
    <string name="delete_table_success">Table deleted successfully!</string>
    <string name="delete_table_fail">"Couldn't delete table. Try again later! "</string>
    <string name="get_tables_fail">Tables couldn\'t be pulled from server. Try again later!</string>
    <string name="table">Table</string>
    <string name="delete_food_success">Food deleted successfully!</string>
    <string name="delete_food_fail">Couldn\'t delete food. Try again later!</string>
    <string name="no_items_in_order">The order is empty!</string>

    <string-array name="worker_types">
        <item>Chef</item>
        <item>Waiter</item>
        <item>Manager</item>
    </string-array>

    <string-array name="food_types">
        <item>Dish</item>
        <item>Drink</item>
    </string-array>

</resources>