<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/login_background" />

    <EditText
        android:id="@+id/etWorkerLogin"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/login_placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etWorkerPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etWorkerLogin"
        android:layout_alignStart="@+id/etWorkerLogin"
        android:layout_alignEnd="@+id/etWorkerLogin"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/etWorkerPassword"
        android:layout_alignStart="@+id/etWorkerPassword"
        android:layout_alignEnd="@+id/etWorkerPassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@color/transparent"
        android:text="@string/login_btn" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/btLogin"
        android:layout_alignStart="@+id/etWorkerPassword"
        android:layout_alignEnd="@+id/etWorkerPassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:background="@color/transparent"
        android:text="@string/table_btn" />

    <Button
        android:id="@+id/btnPl"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnTable"
        android:layout_alignEnd="@+id/btnTable"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/transparent"
        android:text="@string/plLanguage" />

    <Button
        android:id="@+id/btnEn"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnTable"
        android:layout_alignStart="@+id/btnTable"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/transparent"
        android:text="@string/enLanguage" />


</RelativeLayout>