<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
tools:context=".AddEditTableActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:fontFamily="@font/courgette"
        android:text="@string/manage_table"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/etSeats"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="91dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="91dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/number_of_seats"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btSaveTable"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="91dp"
        android:background="@color/transparent"
        android:text="@string/save" />


</RelativeLayout>