<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderStatusActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="3"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/status_received"
        android:text="@string/status_order_placed"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="@dimen/order_status_text_size"
        android:background="@color/order_status_ready"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/status_in_progress"
        android:text="@string/status_order_in_progress"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="@dimen/order_status_text_size"
        android:background="@color/order_status_await"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/status_ready"
        android:text="@string/status_order_ready"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="@dimen/order_status_text_size"
        android:background="@color/order_status_await"

        />


</LinearLayout>